<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>

    <!---<Spinner
        android:id="@+id/crime_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/crimes"


    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"/>-->


    <Spinner
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:entries="@array/crimes"
        android:spinnerMode="dropdown" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_description_label"/>

    <EditText
        android:id="@+id/crime_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_description"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solve_label"/>

    <EditText
        android:id="@+id/solved_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/solved_description"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_time_title"/>

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/crime_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"/>

</LinearLayout>